# src/main/java/com/playona/api/domain/platform/repository/PlatformTrackRepository.java
@@ -1,5 +1,7 @@
-package com.playona.api.domain.platform.entity;
+package com.playona.api.domain.platform.repository;
 
+import com.playona.api.domain.platform.entity.Platform;
+import com.playona.api.domain.platform.entity.PlatformTrack;
 import com.playona.api.domain.track.entity.Track;
 import org.springframework.data.jpa.repository.JpaRepository;
 import java.util.List;
